src/objects/SPE_ProjectMaster__c.object
<CustomObject>
    <fields>
        <fullName>CBT__c</fullName>
        <label>CBT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CT__c</fullName>
        <label>CT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketUnit__c</fullName>
        <label>Market Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Project Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Country__c</columns>
        <columns>Market__c</columns>
        <columns>MarketUnit__c</columns>
        <columns>CBT__c</columns>
        <columns>CT__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>